# cli-rl-env

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  verify_installation.py
cli_rl_env/: __init__.py  environment.py  prompt_dataset_generator.py
cli_rl_env/evaluation/: __init__.py  evaluator.py  metrics.py
cli_rl_env/executor/: __init__.py  cli_simulator.py  command_parser.py  sandbox.py
cli_rl_env/reward/: __init__.py  calculator.py
cli_rl_env/scenario_generator/: __init__.py  base.py  bug_injector.py  diverse_scenarios.py  javascript_generator.py  prompt_generator.py  python_generator.py
cli_rl_env/utils/: diversity_analyzer.py
cli_rl_env/verifier/: __init__.py  linter.py  test_runner.py  text_matcher.py
datasets/diverse_dataset/: full_dataset.json  generated_latest.json  stats.json  test.json  train.json  val.json
datasets/sample_dataset/: stats.json  test.json  train.json  val.json
datasets/unified_dataset/: full_dataset.json  stats.json  test.json  train.json  val.json
evaluation_results/: lm_studio_20251031_133136.json  lm_studio_20251031_134642.json  lm_studio_20251031_155050.json  lm_studio_20251031_171922.json  lm_studio_20251031_180524.json  lm_studio_20251031_180943.json  lm_studio_20251031_181001.json  lm_studio_20251031_181020.json  lm_studio_20251031_181027.json  lm_studio_20251031_214357.json  lm_studio_test_run.json  unified_dataset_20251031_215224.json
examples/: __init__.py  basic_usage.py  evaluate_lm_studio.sh  evaluate_model.py  evaluation_demo.py  generate_dataset.py  generate_diverse_dataset.py  generate_training_dataset.py  prompt_dataset_generation.py  quick_eval.sh  train_with_dataset.py  training_loop.py
tests/: __init__.py  test_diversity.py  test_environment.py  test_safety.py
